<resources>
    <string name="app_name">BattleMath</string>
    <string name="weapon_size">Weapon Size</string>
    <string name="grouping_size">Grouping Size</string>
    <string name="side_hit">Side Hit</string>
    <string name="target">Target</string>
    <string name="mech">MECH</string>
    <string name="vehicle">VEHICLE</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="left">LEFT FRONT RIGHT REAR</string>
    <string name="leftV2">LEFT</string>

    <string name="left_page2">&#160;&#160;LEFT&#160;&#160;&#160;&#160;&#160;&#160;FRONT&#160;&#160;&#160;&#160;RIGHT&#160;&#160;&#160;&#160;REAR</string>

    <string name="center">FRONT</string>
    <string name="right">RIGHT</string>
    <string name="rear">REAR</string>
    <string name="go">GO!</string>
    <string name="cluster_weapon">Cluster Weapon?</string>
    <string name="cluster">cluster</string>
    <string name="dmg_per_shot">DMG per shot</string>
    <string name="tracked">Tracked</string>
    <string name="wheeled">Wheeled</string>
    <string name="hover">Hover</string>
    <string name="critici">Critici</string>
    <string name="ct">CT</string>
    <string name="la">LA</string>
    <string name="lt">LT</string>
    <string name="rt">RT</string>
    <string name="ll">LL</string>
    <string name="rl">RL</string>
    <string name="ra">RA</string>
    <string name="hd">HD</string>
    <string name="author">by ES&#160;&#160;</string>
    <string name="critical_side">Critical Side</string>
    <string name="critical_turret">Critical Turret</string>
    <string name="motive_system_dmg">Motive System DMG</string>
    <string name="tu">TU</string>
    <string name="ls">LS</string>
    <string name="rs">RS</string>
    <string name="rr">RR</string>
    <string name="fr">FR</string>
    <string name="clear">CLEAR</string>
    <string name="narc_artemis">NARC/ARTEMIS?</string>
    <string name="weapon_selection_screen">Weapon Selection Screen</string>
    <string name="grouping_modifier">Grouping Modifier</string>
    <string name="srm6">SRM6</string>
    <string name="lrm20">LRM20</string>
    <string name="tap_to_fire">Tap To Fire</string>
    <string name="lrm15">LRM15</string>
    <string name="lrm5">LRM5</string>
    <string name="size">SIZE</string>
    <string name="lrm10">LRM10</string>
    <string name="srm4">SRM4</string>
    <string name="lbx">LBX</string>
    <string name="srm2">SRM2</string>
    <string name="modifier">Modifier</string>
    <string name="weapons">Weapons</string>
    <string name="thx_msg">Thanks for using the app! If you\'d like to buy me a coffee and support future improvements, please consider donating!</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="mission_info">Mission Info</string>
    <string name="turn_number">Turn Number:</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="attacker_team_name">attacker team name</string>
    <string name="vp_defender">VP defender:</string>
    <string name="defender">Defender:</string>
    <string name="defender_team_name">defender team name</string>
    <string name="attacker">Attacker:</string>
    <string name="_0">0</string>
    <string name="weapon_list">Weapon List</string>
    <string name="operation">Operation</string>
    <string name="custom_weapon">Custom Weapon</string>
    <string name="sound">Sound</string>
    <string name="wallpaper">wallpaper</string>
    <string name="vp_attacker">VP attacker</string>
    <string name="settings">Settings</string>
    <string name="theme">Theme</string>
    <string name="theme_system">Follow system</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="about">About</string>
    <string name="about_description"> A BattleTech companion app for tabletop game management. </string>
    <string name="about_author"> Developed by Edoardo Spalletta </string>
    <string name="version">Version </string>
    <string name="mit_license">MIT License</string>
    <string name="version_format">Version %1$s</string>
    <string name="donate">Donate</string>
    <string name="cancel">Cancel</string>
    <string name="battlemath_v">BattleMath v</string>
    <string name="todo">TODO</string>

</resources>